various form stuffs (+7 squashed commits) Squashed commits: [4098509] just kill public contents not whole directory [136d5f7] better organisation [a5b6bc5] fix text button [4f4ed3f] process files in the /css directory first, and add stylus variables [befa4c0] fixed???? [92a2884] problematic save type button - won't render unless importing some other atom at the same time... [0f0fb58] stab at add viist mockup

--- a/mockups/source/_patterns/00-atoms/buttons/button.styl
+++ b/mockups/source/_patterns/00-atoms/buttons/button.styl
@@ -1,4 +1,15 @@
 .btn
 
-  border 1px solid black
+  cursor pointer
+  padding 8px 12px
   border-radius 5px
+  border 1px solid lightgrey
+  outline none
+
+  &.btn-save
+
+    background $color-success
+
+    &:hover
+
+      background darken($color-success, 15)
