--- a/mockups/source/_patterns/00-atoms/forms/input.styl
+++ b/mockups/source/_patterns/00-atoms/forms/input.styl
@@ -1,10 +1,4 @@
 .input
 
-  display block
-  padding 6px 18px
-
-.checkbox-input
-
-  .input
-  
-    display inline-block
+  padding 6px 10px 5px
+  font-size 16px
