--- a/mockups/source/_patterns/02-organisms/visits/add-visit.styl
+++ b/mockups/source/_patterns/02-organisms/visits/add-visit.styl
@@ -1,3 +1,19 @@
 .add-visit
 
   font-size 20px
+
+  .form-field
+
+    display block
+    margin-bottom 10px
+
+  .btn
+
+    display block
+    width 100%
+    text-transform uppercase
+    background lightgreen
+
+    &:hover
+
+      background darken(lightgreen, 15)
